<resources>
    <string name="app_name">Philips HUE Weekopdracht</string>
    <string name="title_activity_botom_navigationview">MainActivity</string>
    <string name="title_power">Power</string>
    <string name="title_refresh">Refresh</string>

    <string name="button_del">remove</string>
    <string name="button_power">on/off</string>

    <string name="turnLampOn">Lamp %1$s has been turned on</string>
    <string name="turnLampOff">Lamp %1$s has been turned off</string>
    <string name="deleteLamp">Lamp %1$s has been deleted</string>
    <string name="setLampColor">Lamp %1$s color has been changed</string>
    <string name="setLampName">Lamp %1$s name has been changed to %2$s</string>
    <string name="getAllLamps">The list with lamps has been refreshed</string>
    <string name="linkButtonDialog">Click the link button on the Philips Hue Bridge to pair the app, make sure you do this before clicking the OK button</string>


    <string name="button_back">back</string>


    <string name="textViewFading">Fading speed</string>
    <string name="textViewDisco">Disco speed</string>

    <string name="textViewPower">power of the lamp:</string>
    <string name="textViewName">Enter new name:</string>
    <string name="textViewR">R:</string>
    <string name="textViewG">G:</string>
    <string name="textViewB">B:</string>
</resources>