...
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailSeekBarFading"
        app:layout_constraintVertical_bias="0.024" />

    <Button
        android:id="@+id/detailButtonOnOffFading"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:text="@string/button_power"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
...
